# RPG-Project

./: .gitmodules  README.md
assets/scenes/: demo.scene
assets/shaders/opengl/: default.frag  default.vert  lines.frag  lines.vert
code/: main.cpp
code/project/: Player.cpp  Player.hpp  SceneMain.cpp  SceneMain.hpp
shared/: shared-scripts.sh
targets/android/: .gitignore  build.gradle  settings.gradle  setup.ps1  setup.sh
targets/android/SDL/: build.gradle
targets/android/SDL/src/main/: AndroidManifest.xml
targets/android/app/: CMakeLists.txt  build.gradle
targets/android/app/src/main/: AndroidManifest.xml
targets/android/app/src/main/cpp/: vulkan-wrapper-patch.h
targets/android/app/src/main/java/com/redpandagames/rpgengine/: MainActivity.java
targets/android/app/src/main/res/values/: strings.xml
targets/android/gradle/wrapper/: gradle-wrapper.properties
targets/console/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh
targets/console/vulkan/icd.d/: MoltenVK_icd.json
targets/emscripten/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh  template.html
targets/ios/: .gitignore  project.yml  setup.sh
targets/macos/: .gitignore  project.yml  setup.sh
targets/windows/: .gitignore  CMakeLists.txt  CMakeSettings.json  cmake-post-build.ps1  setup.ps1
vulkan_shader_source/: compile_shaders.ps1  compile_shaders.sh  default.frag  default.vert  lines.frag  lines.vert
